# matrix-bot-haskell

./: CHANGELOG.md  README.md  config.dhall  flake.nix  matrix-bot.cabal
app/: Main.hs
src/MatrixBot/: Main.hs
