cabal-version:      2.4
name:               matrix-bot
version:            0.1.0.0
license:            Apache-2.0
license-file:       LICENSE
author:             Tristan Cacqueray
maintainer:         tdecacqu@redhat.com
copyright:          2021 Red Hat
extra-source-files: CHANGELOG.md

flag dev
  description: Use development settings
  default:     False
  manual:      True

common common
    default-language: Haskell2010
    if flag(dev)
        ghc-options:
            -Wall
            -Wcompat
            -Werror
            -Widentities
            -Wincomplete-record-updates
            -Wincomplete-uni-patterns
            -Wpartial-fields
            -Wredundant-constraints
    else
        ghc-options:
            -Wall

library
    import:           common
    build-depends:    base ^>=4.14.1.0
                    , dhall
                    , matrix-client
                    , mueval
                    , relude
    hs-source-dirs:   src
    exposed-modules:  MatrixBot.Main
    default-language: Haskell2010
